# portfolio-jibhar

./: .gitignore  .replit  architecture.html  design_guidelines.md  package-lock.json  package.json  render.yaml  replit.md  tailwind.config.ts
.claude/: settings.local.json
.local/secondary_skills/migrate-to-multi-artifact/: .fingerprint
.local/share/.cargo/: .global-cache
.local/skills/artifacts/: .fingerprint
.local/skills/deployment/: .fingerprint
.local/skills/follow-up-tasks/: .fingerprint
.local/skills/fullstack-js/: .fingerprint
.local/skills/mockup-extract/: .fingerprint
.local/skills/mockup-graduate/: .fingerprint
.local/skills/mockup-sandbox/: .fingerprint
.local/skills/revenuecat/: .fingerprint
.local/skills/stripe/: .fingerprint
.local/skills/whop/: .fingerprint
.local/skills/workflows/: .fingerprint
.local/state/replit/: log-query.db  log-query.db-shm  log-query.db-wal
.local/state/scribe/: scribe.db  scribe.db-shm  scribe.db-wal
attached_assets/: Pasted-Prompt-pour-g-n-rer-un-site-web-de-portfolio-Informatio_1766058128857.txt
client/: index.html
client/src/: App.tsx  index.css  main.tsx
client/src/components/: about-preview.tsx  about-section.tsx  brand-icons.tsx  contact-form.tsx  (+13 more)
rust_server/: Cargo.toml
rust_server/src/: handlers.rs  main.rs  models.rs  state.rs
server/: database.ts  db.ts  helpers.ts  index.ts  persist.ts  routes.ts  storage.ts
server/middleware/: upload.ts
server/routes/: analytics.ts  blog.ts  contact.ts  files.ts  index.ts  media.ts  projects.ts  services.ts
shared/: schema.ts
(+48 files in other folders)
